2003-02-18  Matthias Clasen  <maclas@gmx.de>

	* gtkdoc-mkhtml.in (declaration): Avoid the unportable grep 
	option -q.  (#105311)

2003-02-19  James Henstridge  <james@daa.com.au>

	* devhelp.xsl: put chapters that aren't at the top level into the
	toc tree (to make gtk's .devhelp tree look better).

	* gtk-doc.spec.in (Requires): make the requires lines match
	current requirements ...

	* gtkdoc-mkhtml.in (XSLTPROC): pass --nonet to xsltproc, so we
	don't try to download DTDs and XSLT over the net.  The configure
	checks should catch people who don't have the correct files in
	their catalog.

2003-02-17  James Henstridge  <james@daa.com.au>

	* gtkdocize.in (--version): add --version argument.

2003-02-14  James Henstridge  <james@daa.com.au>

	* gtkdoc-mkdb.in (GetOptions): actually accept --tmpl-dir as a
	command line option.  Based on a patch from Simon Josefsson
	<jas@extundo.com>.

	* gtk-doc.xsl: remove the xmlns declaration.  Not really needed
	for html output anyway ...

2003-02-13  James Henstridge  <james@daa.com.au>

	* devhelp.xsl: remove refsect1's and refsect2's from book tree, as
	suggested by Hallski.

	* gtk-doc.make (install-data-local): the change to install images
	was superfluous, so I have removed it.
	(CLEANFILES): move some more stuff to CLEANFILES from the
	distclean-local rule.

2003-02-12  James Henstridge  <james@daa.com.au>

	* gtk-doc.make: add some chmod calls to work arround distcheck on
	automake >= 1.6.
	(install-data-local): copy the images as well as the html files
	during install.
	(uninstall-local): add an uninstall rule to remove the docs.
	(CLEANFILES): add $(DOC_MODULE)-scan.o to the list of files to be
	cleaned up.

2003-02-09  James Henstridge  <james@daa.com.au>

	* gtkdocize.in: script used to copy gtk-doc.make into another
	module.

	* gtk-doc.make: automake makefile fragment to handle gtk-doc
	support in other modules.

	* configure.in: check to make sure DocBook XML DTD and XSLT