@@ -1,5 +1,9 @@
 
-AC_DEFUN([_JH_CHECK_XML_CATALOG_PREP],
+# Checks the location of the XML Catalog
+# Usage:
+#   JH_PATH_XML_CATALOG
+# Defines XMLCATALOG and XML_CATALOG_FILE substitutions
+AC_DEFUN([JH_PATH_XML_CATALOG],
 [
   # check for the presence of the XML catalog
   AC_ARG_WITH([xml-catalog],
@@ -11,8 +15,10 @@ AC_DEFUN([_JH_CHECK_XML_CATALOG_PREP],
   if test -f "$XML_CATALOG_FILE"; then
     AC_MSG_RESULT([found])
   else
+    AC_MSG_RESULT([not found])
     AC_MSG_ERROR([XML catalog not found])
   fi
+  AC_SUBST([XML_CATALOG_FILE])
 
   # check for the xmlcatalog program
   AC_PATH_PROG(XMLCATALOG, xmlcatalog, no)
@@ -23,14 +29,19 @@ AC_DEFUN([_JH_CHECK_XML_CATALOG_PREP],
 
 # Checks if a particular URI appears in the XML catalog
 # Usage:
-#   JH_CHECK_XML_CATALOG(URI)
+#   JH_CHECK_XML_CATALOG(URI, [FRIENDLY-NAME], [ACTION-IF-FOUND], [ACTION-IF-NOT-FOUND])
 AC_DEFUN([JH_CHECK_XML_CATALOG],
 [
-  AC_REQUIRE([_JH_CHECK_XML_CATALOG_PREP])dnl
-  AC_MSG_CHECKING([for $1 in XML catalog])
-  if $XMLCATALOG --noout "$XML_CATALOG_FILE" "$1" >/dev/null 2>&1; then
+  AC_REQUIRE([JH_PATH_XML_CATALOG])dnl
+  AC_MSG_CHECKING([for ifelse([$2],,[$1],[$2]) in XML catalog])
+  if AC_RUN_LOG([$XMLCATALOG --noout "$XML_CATALOG_FILE" "$1" >&2]); then
     AC_MSG_RESULT([found])
+    ifelse([$3],,,[$3
+])dnl
   else
-    AC_MSG_ERROR([not found])
+    AC_MSG_RESULT([not found])
+    ifelse([$4],,
+       [AC_MSG_ERROR([could not find ifelse([$2],,[$1],[$2]) in XML catalog])],
+       [$4])
   fi
 ])
